--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -15,11 +15,14 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
-$royal: #73C8A9; 
-$positive: #73C8A9; 
-$dark: #373B44; 
-$stable: #DEE1B6; 
-$assertive: #BD5532; 
+
+$royal: #73C8A9;
+$positive:  #73C849;
+$dark: #373B44;
+$stable: #DEE1B6;
+$assertive:  #BD5532;
+
+
 @import url(http://fonts.googleapis.com/css?family=Domine:400,700); 
 $font-family-base: ‘Domine’, serif; 
 // The path for our ionicons font files, relative to the built CSS in www/css
@@ -27,6 +30,5 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
-@import “www/lib/ionic/scss/ionic”; 
-@import “www/scss/form.scss”; 
-@import “www/scss/styles.scss”;
+@import "www/scss/form.scss";
+@import "www/scss/styles.scss";
