--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -1,21 +1,75 @@
 <ion-view title="Signup">
     <ion-content overflow-scroll="true" padding="true" scroll="false" class="has-header">
-        <form class="list">
+        <form name = "createForm"
+              ng-submit="signUp(createForm)"
+              novalidate =""
+              class="create-form">
             <ion-list>
-                <label class="item item-input">
+                <label class="item item-input"
+                       ng-class="{'has-error':createForm.name.$invalid}">
                     <span class="input-label">Name</span>
-                    <input type="text" placeholder="">
+                    <input type="text"
+                           placeholder=""
+                           ng-model="formData.name"
+                           name = "name"
+                           ng-required="true"  >
                 </label>
-                <label class="item item-input">
-                    <span class="input-label">Username</span>
-                    <input type="text" placeholder="">
+
+              <div class="form-errors"
+                ng-messages="createForm.name.$error">
+                <div ng-messages-include="templates/required.$error"></div>
+              </div>
+
+                <label class="item item-input"
+                       ng-class="{'has-error':createForm.email.$invalid}">
+                    <span class="input-label">Email</span>
+                    <input type="email"
+                           placeholder=""
+                           ng-model="formData.email"
+                           name="email"
+                           ng-minlength="6"
+                           ng-messages-include="templates/form-errors.html"
+                           ng-required="true"
+                    >
                 </label>
-                <label class="item item-input">
+
+              <div class="form-errors"
+                   ng-messages="createForm.email.$error">
+                  <div ng-messages-include="templates/form-errors.html"> </div>
+              </div>
+
+              <div class="form-errors"
+                   ng-messages="createForm.required.$error">
+                <div ng-messages-include="templates/form-errors.html"></div>
+              </div>
+
+              <label class="item item-input"
+                     ng-class="{'has-error':createForm.password.$invalid}">
                     <span class="input-label">Password</span>
-                    <input type="text" placeholder="">
+                    <input type="password"
+                           placeholder=""
+                           ng-model="formData.password"
+                           name="password"
+                           ng-minlength="6"
+                           ng-required="true"
+                    >
                 </label>
+
+              <div class="form-errors"
+                   ng-messages="createForm.minlength.$error">
+                <div ng-messages-include="templates/form-errors.html"> </div>
+              </div>
+
+              <div class="form-errors"
+                   ng-messages="createForm.required.$error" >
+                <div ng-messages-include="templates/form-errors.html"></div>
+
+              </div>
+
+
             </ion-list>
-            <a href="#/login" class="button button-stable button-block ">Sign up</a>
+
+            <button class="button  button-block" type="submit" > Sign up </button >
         </form>
     </ion-content>
 </ion-view>
