--- a/www/templates/recipeBook.html
+++ b/www/templates/recipeBook.html
@@ -21,5 +21,11 @@
                 <p>Calories: 450</p>
             </ion-item>
         </ion-list>
+        
+        <ion-infinite-scroll
+           immediate-check="false"
+            on-infinite="loadMore()"
+        ></ion-infinite-scroll>
+        
     </ion-content>
 </ion-view>
