Changes for adding and deleting ingredients to recipes

--- a/www/templates/addARecipe.html
+++ b/www/templates/addARecipe.html
@@ -57,17 +57,17 @@
             <ion-list class="item-icon-right" ng-controller="addARecipeCtrl" ng-init="ingredient()">
                 <ion-item ng-repeat="i in retVals">
                     <p>{{i.ingName}}</p>
-                    <p>{{i. ingInstructions}}</p>
+                    <p>{{i.ingInstructions}}</p>
                     <p> Quantity:  {{i.quantity}}    Measurement: {{i.measurement}}</p>
 
-                    <ion-option-button class="button-positive"><i class="icon ion-edit"></i></ion-option-button>
-                    <ion-option-button class="button-assertive"><i class="icon ion-ios-trash"></i></ion-option-button>
-                    
+                    <ion-option-button class="button-positive" ng-click="setFill(i)" ><i class="icon ion-edit"></i></ion-option-button>
+                    <ion-option-button class="button-assertive" ng-click="remove(i)"><i class="icon ion-ios-trash"></i></ion-option-button>
                     
 
                 </ion-item>
             </ion-list>
-            <a href="#/page23" class="button button-stable button-block">Add Ingredient</a>
+
+            <a href="#/page23" class="button button-stable button-block" ng-click="setNew()">Add Ingredient</a>
             <button class="button button-stable button-block" type="submit">Submit Recipe</button>
         </form>
     </ion-content>
