--- a/www/templates/addARecipe.html
+++ b/www/templates/addARecipe.html
@@ -50,7 +50,8 @@
                            placeholder="Describe Your Recipe">
                 </label>
             </section>
-
+            <br />
+           <!-- <button class="button button-icon ion-camera" ng-click="addPicture()"></button>-->
 
             <br />
             <br />
@@ -61,14 +62,14 @@
                     <p> Quantity:  {{i.quantity}}    Measurement: {{i.measurement}}</p>
 
                     <ion-option-button class="button-positive" ng-click="setFill(i)" ><i class="icon ion-edit"></i></ion-option-button>
-                    <ion-option-button class="button-assertive" ng-click="remove(i)"><i class="icon ion-ios-trash"></i></ion-option-button>
+                    <ion-option-button class="button-assertive" ng-click="setRemove(i)"><i class="icon ion-ios-trash"></i></ion-option-button>
                     
 
                 </ion-item>
             </ion-list>
 
             <a href="#/page23" class="button button-stable button-block" ng-click="setNew()">Add Ingredient</a>
-            <button class="button button-stable button-block" type="submit">Submit Recipe</button>
+            <button class="button button-balanced button-block" type="submit">Submit Recipe</button>
         </form>
     </ion-content>
 </ion-view>
