Added change password code.

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -3,6 +3,7 @@
         <ion-list>
             <ion-item href="#/page18">My Account</ion-item>
             <ion-item href="#/page19">Share My Data</ion-item>
+            <button class="button  button-block" type="submit" ng-click= "changePW()" > Change Password </button >
         </ion-list>
     </ion-content>
 </ion-view>
