Barcode Scanner. Cordova plugin required.

--- a/www/templates/addNutrition.html
+++ b/www/templates/addNutrition.html
@@ -57,5 +57,6 @@
           </section>
         </form>
       <button class="button button-balanced button-block" type="submit">Submit</button>
+      <button class="button button-balanced button-block" ng-click="scanBarcode()">Scan</button>
     </ion-content>
 </ion-view>
