addIngredient in progress

--- a/www/templates/addIngredient.html
+++ b/www/templates/addIngredient.html
@@ -2,7 +2,7 @@
   <ion-content overflow-scroll="true" padding="true" class="has-header">
     <form class="list"
           name="addIngredientForm"
-          ng-submit="addNewIngredient(addIngredientForm)"
+          ng-submit="submit(addIngredientForm)"
           novalidate
           class="create-form">
 
