--- a/www/templates/myMeds.html
+++ b/www/templates/myMeds.html
@@ -20,6 +20,6 @@
             <div class="item item-divider">Card</div>
             <div class="item item-body"></div>
         </div>
-        <a href="#/page16" class="button button-stable button-block ">Add Medicine</a>
+      <button class="button button-block" type="submit" ng-click="addMeds()">Add New</button>
     </ion-content>
 </ion-view>
