got addIngredients buttons working

--- a/www/templates/addIngredient.html
+++ b/www/templates/addIngredient.html
@@ -59,7 +59,7 @@
                  placeholder="Additional Comments">
         </label>
     </form>
-    <button class="button button-balanced button-block" type="submit" ng-click="addIngredient">Add Another Ingredient</button>
-    <button class="button button-balanced button-block" type="submit" ng-click="submit">Submit</button>
+    <button class="button button-balanced button-block" type="submit" ng-click="addIngredient(addIngredientForm)">Add Another Ingredient</button>
+    <button class="button button-balanced button-block" type="submit" ng-click="submit(addIngredientForm)">Submit</button>
   </ion-content>
 </ion-view>
