--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -4,6 +4,7 @@
             <ion-item href="#/page18">My Account</ion-item>
             <ion-item href="#/page19">Share My Data</ion-item>
             <button class="button  button-block" type="submit" ng-click= "changePW()" > Change Password </button >
+            <button class="button  button-block" type="submit" ng-click= "logOut()" > Logout </button>
         </ion-list>
     </ion-content>
 </ion-view>
